короч ээээ улучшение асинк патхфайдинга (наверное) и фикс системы замедления тиков для дальних энтити